In de MainMetPion werken er een aantal zaken niet.
Ik had graag een counter gemaakt die elke keer eentje verhoogd wanneer er op de roll button geklikt wordt, zodat we kunnen bijhouden welke speler er aan zet is.

daarnaast wilde ik ook ook if voorwaarde implementeren om er voor te zorgen dat de pion vanaf dat die 1500px bereikt heeft niet meer naar rechts gaat, maar naar onder.

Om dit te kunnen doen, moet de pion stap voor stap gaan zodat elke keer gecheckt kan worden of hij de 1500px overschreven heeft, maar de for lus werkt niet.

--- a/resources/stylesheets/main.css
+++ b/resources/stylesheets/main.css
@@ -14,13 +14,17 @@
 
 #ms,#cs {
 
-    -fx-background-image: url('/images/kaart.png');
+    -fx-background-image: url('/images/Main/kaart.png');
     -fx-background-position: center center;
     -fx-background-repeat: no-repeat;
     -fx-alignment: center;
     -fx-spacing: 20px;
     -fx-font: 20px Tahoma;
     -fx-font-weight: bold;
+}
+
+#ag {
+    -fx-background-image: url('/images/Main/antiMonopolyAchtergrond.jpg');
 }
 
 #rg,#ds,#ss,#pdm,#ks,#rdd,#b,#pv,#ll,#rr,#gr,#rsl,#ls,#gpm,#gm,#pdl,#h,#v,#bv,#s1,
@@ -71,4 +75,6 @@
 #ns,#zs,#os,#ws,#nk1,#nk2,#nk3,#nk4,#nk5,#nk6,#eb,#ib,#em,#gas,#start,#gng,#ams,#gev,#s1 {
     -fx-background-color: black;
 }
+
+
 
