--- a/resources/stylesheets/main.css
+++ b/resources/stylesheets/main.css
@@ -27,7 +27,7 @@
     -fx-background-image: url('/images/Main/antiMonopolyAchtergrond.jpg');
 }
 
-#rg,#ds,#ss,#pdm,#ks,#rdd,#b,#pv,#ll,#rr,#gr,#rsl,#ls,#gpm,#gm,#pdl,#h,#v,#bv,#s1,#s2,#s3,#s4,
+#rg,#ds1,#ss,#pdm,#ks,#rdd,#b,#pv,#ll,#rr,#gr,#rsl,#ls,#gpm,#gm,#pdl,#h,#v,#bv,#s1,#s2,#s3,#s4,
 #bda,#m,#n,#ns,#zs,#os,#ws,#nk1,#nk2,#nk3,#nk4,#nk5,#nk6,#eb,#ib,#em,#gas,#start,#gng,#ams,#gev{
     -fx-border-color: black;
     -fx-border-width: 1px;
@@ -40,7 +40,7 @@
 
 }
 
-#rg,#ds {
+#rg,#ds1 {
     -fx-background-color: purple;
 }
 
