--- a/resources/stylesheets/main.css
+++ b/resources/stylesheets/main.css
@@ -1,25 +1,22 @@
+
+/*Witte tekskleur labels*/
 .label {
     -fx-text-fill: white;
 }
 
+/*Zwarte achtergrond van dropdownmenu*/
 .menu-item .label {
     -fx-text-fill: black;
 }
-
+/*buttons krijgen witte achtergroend, vetgedrukte tekst en geen rand*/
 .button {
     -fx-background-color: white;
     -fx-font-weight: bold;
     -fx-border-style: none;
 }
 
-#sm {
-    -fx-background-color: black;
-    -fx-font: 12px Tahoma;
-    -fx-alignment: center;
-}
-
+/*Opmaak van de kaarten*/
 #ms,#cs {
-
     -fx-background-image: url('/images/Main/kaart.png');
     -fx-background-position: center center;
     -fx-background-repeat: no-repeat;
@@ -28,11 +25,12 @@
     -fx-font: 20px Tahoma;
     -fx-font-weight: bold;
 }
-
+/*Plaatsen van centrale afbeelding*/
 #ag {
     -fx-background-image: url('/images/Main/antiMonopolyAchtergrond.jpg');
 }
 
+/*Opmaak van de vakjes op het spelbord en de spelopties*/
 #rg,#ds1,#ss,#pdm,#ks,#rdd,#b,#pv,#ll,#rr,#gr,#rsl,#ls,#gpm,#gm,#pdl,#h,#v,#bv,#s1,#s2,#s3,#s4,
 #bda,#m,#n,#ns,#zs,#os,#ws,#nk1,#nk2,#nk3,#nk4,#nk5,#nk6,#eb,#ib,#em,#gas,#start,#gng,#ams,#gev,#spelopties{
     -fx-border-color: black;
@@ -47,6 +45,7 @@
 
 }
 
+/*Geven van de achtergrondkleuren van de verschillened vakjes op het spelbord*/
 #rg,#ds1 {
     -fx-background-color: purple;
 }
@@ -82,6 +81,7 @@
 #ns,#zs,#os,#ws,#nk1,#nk2,#nk3,#nk4,#nk5,#nk6,#eb,#ib,#em,#gas,#start,#gng,#ams,#gev,#s1,#s2,#s3,#s4,#spelopties {
     -fx-background-color: black;
 }
+
 
 #spelopties .button {
     -fx-font-size: 13px;
