--- a/resources/stylesheets/main.css
+++ b/resources/stylesheets/main.css
@@ -78,7 +78,7 @@
     -fx-background-color: darkblue;
 }
 
-#ns,#zs,#os,#ws,#nk1,#nk2,#nk3,#nk4,#nk5,#nk6,#eb,#ib,#em,#gas,#start,#gng,#ams,#gev,#s1,#s2,#s3,#s4,#spelopties {
+#ns,#zs,#os,#ws,#nk1,#nk2,#nk3,#nk4,#nk5,#nk6,#eb,#ib,#em,#gas,#start,#gng,#ams,#gev,#s1,#s2,#s3,#s4,#spelopties,#sm {
     -fx-background-color: black;
 }
 
